--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
   "name": "caching-middleware",
-  "version": "1.0.0",
-  "description": "redis cache middleware for expressesk backends",
-  "main": "dist/index.js",
-  "scripts": {
-    "start": "webpack --watch",
-    "build": "rm -rf dist/* && webpack",
-    "test": "jest ./src/cache.test.js"
-  },
+  "version": "2.0.0",
+  "description": "caching middleware for expressesk backends",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mklan/caching-middleware.git"
   },
   "keywords": [
     "cache",
-    "redis",
+    "caching",
     "middleware",
     "express"
   ],
@@ -26,26 +21,5 @@
     "url": "https://github.com/mklan/caching-middleware/issues"
   },
   "license": "GNU GPLv3",
-  "homepage": "https://github.com/mklan/caching-middleware#readme",
-  "peerDependencies": {
-    "redis": "^2.8.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/register": "^7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.2",
-    "eslint": "^5.6.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.22.1",
-    "jest": "^23.6.0",
-    "redis": "^2.8.0",
-    "simple-peer": "^9.1.2",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.1.0"
-  }
+  "homepage": "https://github.com/mklan/caching-middleware#readme"
 }
