--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
   "license": "GNU GPLv3",
   "homepage": "https://github.com/mklan/caching-middleware#readme",
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2",
     "jest": "^24.7.1"
   }
 }
